--- a/css/80_app.css
+++ b/css/80_app.css
@@ -1831,25 +1831,36 @@ a.hide-toggle {
 }
 
 
-/* Field - Maxspeed
+/* Field - Maxheight and Maxspeed
 ------------------------------------------------------- */
+.form-field-input-maxheight input.maxheight-number,
+.form-field-input-maxheight input.maxheight-secondary-number,
 .form-field-input-maxspeed input.maxspeed-number {
     flex-basis: 0;
+}
+.form-field-input-maxheight input.maxheight-unit,
+.form-field-input-maxheight input.maxheight-secondary-unit {
+    flex: 0 1 auto;
+    width: 60px;
 }
 .form-field-input-maxspeed input.maxspeed-unit {
     flex: 0 1 auto;
     width: 80px;
 }
+.ideditor[dir='ltr'] .form-field-input-maxheight > input:first-of-type,
 .ideditor[dir='ltr'] .form-field-input-maxspeed > input:first-of-type {
     border-radius: 0 0 0 4px;
 }
+.ideditor[dir='rtl'] .form-field-input-maxheight > input:first-of-type,
 .ideditor[dir='rtl'] .form-field-input-maxspeed > input:first-of-type {
     border-radius: 0 0 4px 0;
 }
+.ideditor[dir='ltr'] .form-field-input-maxheight > input:last-of-type,
 .ideditor[dir='ltr'] .form-field-input-maxspeed > input:last-of-type {
     border-left: 0;
     border-radius: 0 0 4px 0;
 }
+.ideditor[dir='rtl'] .form-field-input-maxheight > input:last-of-type,
 .ideditor[dir='rtl'] .form-field-input-maxspeed > input:last-of-type {
     border-right: 0;
     border-radius: 0 0 0 4px;
